--- a/templates/Base.html
+++ b/templates/Base.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en, es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="">
-    <title>Document</title>
+    <title> {% block title %} FLASK PLATZI |{% endblock %} </title>
 </head> 
 <body>
 <main>
+    <article> <h1> What's going on?! </h1>  </article>
+
+    {% block content %}
+
+    <h3> Hace mucho tiempo</h3>
+    <p> Yo era un muchacho feliz y joven... </p>
+
+    {% endblock %}
 
 </main>
 </body>
