Actualizando los links y agregando las etiquetas  figure and img.  FALTA AGREGAR EL SRC

--- a/templates/Lista_Del_Super.html
+++ b/templates/Lista_Del_Super.html
@@ -20,24 +20,24 @@
     <ol>
         <h3 class="display-6 mx-3 my-3"> <li class="text-primary"> Frutas </li> </h3>
         <ul class="col-4">
-            <li> <a href="#" class="text-secondary"> 4 Manzanas. </a> </li>
-            <li> <a href="#" class="text-secondary"> 3 Peras. </a> </li>
-            <li> <a href="#" class="text-secondary"> 1 racimo de uvas. </a> </li>
-            <li> <a href="#" class="text-secondary"> 6 Limones. </a> </li>
+            <li> <a href=" https://www.bbcgoodfood.com/recipes/collection/apple-recipes " class="text-secondary"> 4 Manzanas. </a> <figure> <img src="" alt="Imagen de Manzanas"> </figure> </li>
+            <li> <a href=" https://www.bbcgoodfood.com/recipes/collection/pear-recipes " class="text-secondary"> 3 Peras. </a> <figure></figure> <img src="" alt="Imagen de Peras"> </figure> </li>
+            <li> <a href=" https://www.tasteofhome.com/collection/gorgeous-grape-recipes/ " class="text-secondary"> 1 racimo de uvas. </a> <figure></figure> <img src="" alt="Imagen de Racimo de Uvas"> </figure> </li>
+            <li> <a href=" https://www.bbcgoodfood.com/recipes/collection/lemon-recipes " class="text-secondary"> 6 Limones. </a> <figure> <img src="" alt="Imagen de Limones"> </figure> </li>
         </ul>
         <h3 class="display-6 mx-3 my-3"> <li class="text-primary"> Verduras </li> </h3>
         <ul class="col-4">
-            <li> <a href="#" class="text-secondary"> 2 cebollas largas. </a> </li>
-            <li> <a href="#" class="text-secondary"> 5 tomates. </a> </li>
-            <li> <a href="#" class="text-secondary"> 2 aguacates. </a> </li>
-            <li> <a href="#" class="text-secondary"> 3 lechugas. </a> </li>
+            <li> <a href=" https://www.tasteofhome.com/collection/green-onion-recipe/ " class="text-secondary"> 2 cebollas largas. </a> <figure> <img src="" alt="Imagen de cebollas largas"> </figure> </li>
+            <li> <a href=" https://www.bbcgoodfood.com/recipes/collection/tomato-recipes " class="text-secondary"> 5 tomates. </a> <figure> <img src="" alt="Imagen de tomates"> </figure> </li>
+            <li> <a href=" https://www.loveandlemons.com/avocado-recipes/ " class="text-secondary"> 2 aguacates. </a> <figure> <img src="" alt="Imagen de Aguacates"> </figure> </li>
+            <li> <a href=" https://www.bbcgoodfood.com/recipes/collection/lettuce-recipes " class="text-secondary"> 3 lechugas. </a> <figure> <img src="" alt="Imagen de lechuga"> </figure> </li>
         </ul>
         <h3 class="display-6 mx-3 my-3"> <li class="text-primary"> Bebidas </li> </h3>
         <ul class="col-4">
-            <li> <a href="#" class="text-secondary"> Pepsi. </a> </li>
-            <li> <a href="#" class="text-secondary"> Mr.Tea. </a> </li>
-            <li> <a href="#" class="text-secondary"> H2O. </a> </li>
-            <li> <a href="#" class="text-secondary"> Hit Lulo. </a> </li>
+            <li> <a href=" https://www.pepsi.com/  " class="text-secondary"> Pepsi. </a> <figure> <img src="" alt="Imagen de Pepsi"> </figure> </li>
+            <li> <a href=" https://www.coca-cola.com/us/en/brands/fanta " class="text-secondary"> Fanta. </a> <figure> <img src="" alt="Imagen de Fanta"> </figure> </li>
+            <li> <a href=" https://www.pepsicoproductfacts.com/Home/Product?formula=44316*01*01-10&form=RTD&size=8 " class="text-secondary"> Mountain Dew. </a> <figure> <img src="" alt="Imagen de Mountain Dew"> </figure> </li>
+            <li> <a href=" https://www.redbull.com/ " class="text-secondary"> Redbull. </a> <figure> <img src="" alt="Imagen de Redbull"> </figure> </li>
         </ul>
     </ol>
 
